[package]
name = "nested-struct"
description = "Create nested structs using a macro"
categories = ["rust-patterns"]
keywords = ["nested", "struct"]
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
homepage = "https://github.com/chipsenkbeil/nested-struct"
repository = "https://github.com/chipsenkbeil/nested-struct"
readme = "README.md"
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2021"
